# monitor-client

./: .gitignore  CMakeLists.txt  LICENSE
res/: icons.qrc
src/: AVBufferPool.cpp  AVProducer.cpp  AVProducer.h  DialogConnectToOnvif.cpp  DialogConnectToUrl.cpp  DialogConnectToUrl.h  MainWindow.cpp  MainWindow.h  OnvifClient.cpp  OnvifClient.h  ScreenShooter.cpp  ScreenShooter.h  VideoConsumer.cpp  VideoConsumer.h  VideoDisplay.cpp  VideoDisplay.h  audioconsumer.cpp  audioconsumer.h  avbufferpool.cpp  avproducer.cpp  avproducer.h  main.cpp  mainwindow.cpp  mainwindow.h  taudioconsumer.cpp  taudioconsumer.h  tavbufferpool.cpp  tavbufferpool.h  tavproducer.cpp  tavproducer.h  tvideoconsumer.cpp  tvideoconsumer.h  tvideodisplay.cpp  tvideodisplay.h  videoconsumer.cpp  videoconsumer.h  videodisplay.cpp  videodisplay.h
src/core/: AVBufferPool.cpp  AVBufferPool.h  AVProducer.cpp  AVProducer.h  AudioConsumer.cpp  AudioConsumer.h  OnvifClient.cpp  OnvifClient.h  ScreenShooter.cpp  VideoConsumer.cpp  VideoConsumer.h
src/gui/: DialogConnectToOnvif.cpp  DialogConnectToOnvif.h  DialogConnectToUrl.cpp  DirectionalPad.cpp  DirectionalPad.h  MainWindow.cpp  MainWindow.h  VideoDisplay.cpp  VideoDisplay.h
src/utils/: MetaTreeNode.cpp  MetaTreeNode.h
ui/: DialogConnectToOnvif.ui  DialogConnectToUrl.ui  MainWindow.ui  mainwindow.ui
